# deadbeef-infobar-ng

./: CMakeLists.txt  Makefile  README.md  biography.c  biography.h  infobar.c  infobar.h  infobar_bio.c  infobar_bio.h  infobar_lyr.c  infobar_lyr.h  infobar_ui.c  infobar_ui.h  lyrics.c  lyrics.h  similar.c  similar.h  types.h  ui.c  ui.h  utils.c  utils.h
scripts/: example.sh  lyrics.sh  metal-archives.py
